--- a/sdi-project3.html
+++ b/sdi-project3.html
@@ -22,6 +22,6 @@ days we must not delay child, explenations can be had while boots meet earth the
     <pAug 20, 2013 Michael Cothran</p>
 </footer>
 <script type="text/javascript" src="Json.js"></script>
-<script type="text/javascript" src="rename-me.js"></script>
+<script type="text/javascript" src="Cothran_Michael_Project3.js"></script>
 </body>
 </html>
